Fixed wrong width size item in home

--- a/app/home/components/solutionSection/solutionSection.scss
+++ b/app/home/components/solutionSection/solutionSection.scss
@@ -41,7 +41,7 @@
 }
 
 .menuItem {
-  width: 478px;
+  width: 530px;
   height: 190px;
   padding: 24px;
   border-radius: 8px;
@@ -57,7 +57,8 @@
 .menuIcon {
   margin-right: 24px;
   margin-top: 8px;
-  width: 80px;
+  max-width: 80px;
+  width: 100%;
   height: 80px;
 }
 
@@ -75,7 +76,6 @@
 .menuContent {
   font-size: 18px;
   color: #667997;
-  width: 334px;
 }
 
 .learnMoreButton {
